tests/negative/generics/associated_type_eq_not_in_trait.orng
// associated_type_eq_not_in_trait.orng:10:22: error: type `Kablooah` is not in trait `A`
// fn get[T: A[Kablooah=Int]](t: T) -> T::Item {
//                     ^
// 
trait A {
    type Item
    fn get_value(self) -> Self::Item
}

fn get[T: A[Kablooah=Int]](t: T) -> T::Item {
    t.>get_value()
}

struct Impler {}
impl A for Impler {
    type Item = Bool
    fn get_value(self) -> Self::Item { _ = self; false }
}

fn main() -> Int { 4 }
